--- a/server/src/test/resources/src/l10n/ru.yaml
+++ b/server/src/test/resources/src/l10n/ru.yaml
@@ -1,5 +1,11 @@
 ru:
   entities:
+  - javascript:
+    - topics: page
+      entries:
+      - fio: Ф.И.О.
+      - no: нет
+      - yes: да
   - _homepage_:
     - topics: displayName
       entries:
