--- a/server/src/test/resources/src/l10n/ru.yaml
+++ b/server/src/test/resources/src/l10n/ru.yaml
@@ -70,7 +70,7 @@ ru:
     - topics: viewName
       entries:
       - All records For Banks: Все записи
-  - tagFromColumn:
+  - testTags:
     - topics:
       - Clone
       - Edit
