--- a/modules/core/src/l10n/ru.yaml
+++ b/modules/core/src/l10n/ru.yaml
@@ -18,6 +18,14 @@ ru:
     - topics: displayName
       entries:
       - Logout: Выход
+  - categories:
+    - topics:
+      - '@AllQueries'
+      - Insert
+      - Filter
+      entries:
+      - PublicID: Код категориии
+      - Name: Наименование
   - users:
     - topics: displayName
       entries:
