add generate tags from enum, BOOL, reference, localize DisplayName

--- a/server/src/test/resources/src/l10n/ru.yaml
+++ b/server/src/test/resources/src/l10n/ru.yaml
@@ -43,6 +43,15 @@ ru:
       - 'no': нет
       - 'yes': да
   - testTags:
+    - topics: viewName
+      entries:
+      - All records: Все записи
+    - topics: All records
+      entries:
+      - CODE: Код
+      - payable: Оплачиваемая
+      - admlevel: Уроверь
+      - referenceTest: Тест выборки
     - topics:
       - Clone
       - Edit
