add QueryBuilder - to _system_

--- a/modules/core/src/l10n/ru.yaml
+++ b/modules/core/src/l10n/ru.yaml
@@ -41,7 +41,7 @@ ru:
     - topics: viewName
       entries:
       - Session variables: Переменные сессии
-      - Cache: Статистика кэша
+      - Cache: Кэш
       - DataSource: Характеристики БД
       - System Properties: Свойства
       - Threads: Список потоков
