refactoring Login and Logout to be5 operations, remove unused BootstrapModal

--- a/modules/core/src/l10n/ru.yaml
+++ b/modules/core/src/l10n/ru.yaml
@@ -72,6 +72,13 @@ ru:
     - topics: viewName
       entries:
       - Login: Вход
+    - topics: operationName
+      entries:
+      - Login: Авторизация
+    - topics: '@AllQueries'
+      entries:
+      - user_name: Логин
+      - user_pass: Пароль
   - default:
     - topics: operationName
       entries:
