--- a/modules/core/src/l10n/ru.yaml
+++ b/modules/core/src/l10n/ru.yaml
@@ -11,6 +11,7 @@ ru:
       entries:
       - 'Entity not found: $1': 'Объект не найден: $1'
       - 'Access denied': В доступе отказано
+      - Incorrect username or password.: Неправильно указано имя пользователя или пароль.
     - topics: validation
       entries:
       - Please enter only digits.: Здесь должны быть только цифры.
