use addDpExcludeAutoIncrement, localize

--- a/modules/core/src/l10n/ru.yaml
+++ b/modules/core/src/l10n/ru.yaml
@@ -65,8 +65,11 @@ ru:
       - Insert
       - Filter
       entries:
-      - PublicID: Код категориии
-      - Name: Наименование
+      - publicID: Код категориии
+      - parentID: Владелец
+      - name: Наименование
+      - description: Описание
+      - entity: Класс
   - users:
     - topics: displayName
       entries:
