AddRemoveCategoryOperation init, not tested

--- a/modules/core/src/l10n/ru.yaml
+++ b/modules/core/src/l10n/ru.yaml
@@ -94,6 +94,7 @@ ru:
       - Edit: Редактировать
       - Filter: Фильтр
       - Insert: Добавить
+      - +/- category: +/- категории
       - PermaLink: Постояннная ссылка
       - Restore from Archive: Восстановить из архива
   - query.jsp:
