--- a/modules/core/src/l10n/ru.yaml
+++ b/modules/core/src/l10n/ru.yaml
@@ -95,6 +95,8 @@ ru:
       - Filter: Фильтр
       - Insert: Добавить
       - +/- category: +/- категории
+      - AddRemoveCategory: +/- категории
+      - AddRemoveCategoryOperation: +/- категории
       - PermaLink: Постояннная ссылка
       - Restore from Archive: Восстановить из архива
   - query.jsp:
