fix serialization to json

--- a/modules/core/src/l10n/ru.yaml
+++ b/modules/core/src/l10n/ru.yaml
@@ -93,6 +93,7 @@ ru:
       - Delete: Удалить
       - Edit: Редактировать
       - Filter: Фильтр
+      - Print: Печать
       - Insert: Добавить
       - +/- category: +/- категории
       - AddRemoveCategory: +/- категории
