--- a/modules/core/src/l10n/ru.yaml
+++ b/modules/core/src/l10n/ru.yaml
@@ -15,6 +15,9 @@ ru:
       - 'Internal error occurred during query: $1.$2': 'Произошла внутренняя ошибка в представлении: $1.$2'
       - 'Entity not found: $1': 'Сущность не найдена: $1'
       - 'Access denied. $1': 'Доступ запрещен. $1'
+      - 'Access denied to query: $1.$2': 'Доступ к представлению запрещен. $1.$2'
+      - 'Access denied to operation: $1.$2': 'Доступ к операции запрещен. $1.$2'
+      - 'Operation ''$1.$3'' not assigned to query: ''$2''': 'Операция ''$1.$3'' не доступна для представления ''$2'''
       - Error in operation: Ошибка в операции
       - Incorrect username or password.: Неправильно указано имя пользователя или пароль.
       - Access to these records is denied.: 'Доступ к этим записям запрещен.'
