hide TopFilter name

--- a/modules/core/src/l10n/ru.yaml
+++ b/modules/core/src/l10n/ru.yaml
@@ -109,6 +109,7 @@ ru:
       - Filter: Фильтр
       - Print: Печать
       - Insert: Добавить
+      - TopFilter: ''
       - +/- category: +/- категории
       - AddRemoveCategory: +/- категории
       - AddRemoveCategoryOperation: +/- категории
