--- a/modules/core/src/l10n/ru.yaml
+++ b/modules/core/src/l10n/ru.yaml
@@ -14,6 +14,8 @@ ru:
       - 'Internal error occurred during operation: $1.$2': 'Произошла внутренняя ошибка в операции: $1.$2'
       - 'Internal error occurred during query: $1.$2': 'Произошла внутренняя ошибка в представлении: $1.$2'
       - 'Entity not found: $1': 'Сущность не найдена: $1'
+      - 'Operation not found: $1.$2': 'Операция не найдена: $1.$2'
+      - 'Query not found: $1.$2': 'Представление не найдено: $1.$2'
       - 'Access denied. $1': 'Доступ запрещен. $1'
       - 'Access denied to query: $1.$2': 'Доступ к представлению запрещен. $1.$2'
       - 'Access denied to operation: $1.$2': 'Доступ к операции запрещен. $1.$2'
