add localize custom param, tests

--- a/server/src/test/resources/src/l10n/ru.yaml
+++ b/server/src/test/resources/src/l10n/ru.yaml
@@ -78,6 +78,7 @@ ru:
       - Municipal: Муниципальный
       - Regional: Региональный
       - admlevel: Административный уровень
+      - customParam: Кастомный параметер
   - default:
     - topics: operationName
       entries:
