add SUCCESS_ALERT FrontendAction, use in OperationSupport.redirectThisOperation()

--- a/modules/core/src/l10n/ru.yaml
+++ b/modules/core/src/l10n/ru.yaml
@@ -45,6 +45,7 @@ ru:
       - Wait for the download to start.: Ожидайте начала загрузки.
       - '$1 records will be deleted': $1 записей будет удалено
       - '$1 record will be deleted': $1 запись будет удалена
+      - Successfully completed.: Успешно выполнено.
   - _homepage_:
     - topics: displayName
       entries:
