--- a/modules/core/src/l10n/ru.yaml
+++ b/modules/core/src/l10n/ru.yaml
@@ -100,6 +100,7 @@ ru:
       entries:
       - user_name: Логин
       - user_pass: Пароль
+      - Remember me: Запомнить меня
     - topics:
       - Insert
       entries:
