fix categories param name - _cat_ -> cat - for save in self url

--- a/modules/core/src/l10n/ru.yaml
+++ b/modules/core/src/l10n/ru.yaml
@@ -139,6 +139,7 @@ ru:
       - number: №
       - title: Название
       - total: Итого
+      - cat: Категории
       - 'false': нет
       - 'true': да
       - 'no': нет
