--- a/modules/core/src/l10n/ru.yaml
+++ b/modules/core/src/l10n/ru.yaml
@@ -89,7 +89,7 @@ ru:
   - users:
     - topics: displayName
       entries:
-      - Logout: Пользователи
+      - displayName: Пользователи
     - topics: viewName
       entries:
       - Login: Вход
