--- a/modules/core/src/l10n/ru.yaml
+++ b/modules/core/src/l10n/ru.yaml
@@ -87,6 +87,9 @@ ru:
       - description: Описание
       - entity: Класс
   - systemSettings:
+    - topics: displayName
+      entries:
+      - displayName: Установки системы
     - topics:
       - '@AllQueries'
       entries:
