--- a/server/src/test/resources/src/l10n/ru.yaml
+++ b/server/src/test/resources/src/l10n/ru.yaml
@@ -65,6 +65,9 @@ ru:
       - All records: Все записи
     - topics: Insert
       entries:
+      - admlevel: Уровень
+    - topics: 'Alt Insert'
+      entries:
       - admlevel: Уровень1
     - topics: TestLocalizQuery
       entries:
